--- a/web-project/index.html
+++ b/web-project/index.html
@@ -14,12 +14,12 @@
     <!---
     favicon
     -->
-    <link rel="shortcut icon" href="/assets/images/img-fav (3).png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/images/img-fav (3).png" type="image/x-icon">
 
     <!---
     Custom CSS link
     -->
-    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="./index.css">
 
     <!---
     google awesome fonts link
@@ -37,10 +37,10 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 <!---
     preload images
 -->
-<link rel="preload" as="image" href="/Anointed/files/file1/image-file/images/hero.jpg">
-<link rel="preload" as="image" href="/Anointed/files/file1/image-file/images/banner-1.jpg">
-<link rel="preload" as="image" href="/Anointed/files/file1/image-file/images/banner2.jpg">
-<link rel="preload" as="image" href="/Anointed/files/file1/image-file/images/book-4126483_1280.jpg">
+<link rel="preload" as="image" href="./Anointed/files/file1/image-file/images/hero.jpg">
+<link rel="preload" as="image" href="./Anointed/files/file1/image-file/images/banner-1.jpg">
+<link rel="preload" as="image" href="./Anointed/files/file1/image-file/images/banner2.jpg">
+<link rel="preload" as="image" href="./Anointed/files/file1/image-file/images/book-4126483_1280.jpg">
 
 
 
@@ -53,13 +53,13 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 <header class="header fade-in show-once" data-header>
     <div class="container">
         <a href="#" class="logo ">
-            <img src="/assets/banner/logo (2).png" width="160" height="50">
+            <img src="./assets/banner/logo (2).png" width="160" height="50">
         </a>
 
         <nav class="navbar" data-navbar>
             <div class="wrapper">
                 <a href="#" class="logo">
-                    <img src="/assets/banner/logo (2).png" width="160" height="40" alt="">
+                    <img src="./assets/banner/logo (2).png" width="160" height="40" alt="">
                 </a>
 
                 <button class="nav-close-btn" aria-label="close-menu" data-nav-toggler>
@@ -159,20 +159,20 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 
                         <div class="img-holder one" style="--width: 380; --height:320 ;">
-                            <img src="/assets/images/img-banner.PNG"
+                            <img src="./assets/images/img-banner.PNG"
                              width="380" height="400" alt="hero" class="img-cover">
                         </div>
 
                         <div class="img-holder two" style="--width: 380; --height:320 ;">
-                            <img src="/assets/banner/banner-1.jpg" 
+                            <img src="./assets/banner/banner-1.jpg" 
                             width="380" height="400" alt="hero" class="img-cover">
                         </div>
 
-                        <img src="/assets/courses/course-4.avif"
+                        <img src="./assets/courses/course-4.avif"
                          width="300" height="190" alt="" class="shape hero-shape-1">
 
 
-                         <img src="/assets/banner/banner2.jpg"
+                         <img src="./assets/banner/banner2.jpg"
                          width="622" height="551" alt="" class="shape hero-shape-2">
                     </figure>
                 </div>
@@ -204,7 +204,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
                     <li>
                         <div class="category-card slide-up" style="--color: hsl(183, 83%, 75%);">
                         <div class="card-icon">
-                          <img src="/assets/banner/mac.svg" class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" width="40" height="80" 
+                          <img src="./assets/banner/mac.svg" class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" width="40" height="80" 
                             alt="Online Degree Program" class="img img-color"  loading="lazy">
                             
                         </div>
@@ -225,7 +225,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
                     <li>
                         <div class="category-card slide-right" style="--color: hsl(278, 100%, 50%);">
                         <div class="card-icon">
-                            <img src="/assets/category/book-3-fill.svg" width="40" height="80" 
+                            <img src="./assets/category/book-3-fill.svg" width="40" height="80" 
                             alt="Professional Development Program" class="img" loading="lazy">
                         </div>
 
@@ -246,7 +246,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
                     <li>
                         <div class="category-card slide-left" style="">
                         <div class="card-icon">
-                            <img src="/assets/banner/graduation-cap-fill.svg" width="40" height="80" 
+                            <img src="./assets/banner/graduation-cap-fill.svg" width="40" height="80" 
                             alt="Distributed Learning Initiative" class="img" loading="lazy">
                         </div>
 
@@ -266,7 +266,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
                     <li>
                         <div class="category-card slide-down" style="--color: hsl(0, 100%, 50%) ;">
                         <div class="card-icon">
-                            <img src="/assets/banner/community-line.svg" width="40" height="80" 
+                            <img src="./assets/banner/community-line.svg" width="40" height="80" 
                             alt="Mixed-Mode Learning" class="img" loading="lazy">
                         </div>
 
@@ -298,19 +298,19 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 
                 <figure class="about-banner slide-right">
                     <div class="img-holder" style="--width:520; --height:370 ;">
-                        <img src="/assets/courses/course-5.avif" width="520" height="370" class="img-cover">
+                        <img src="./assets/courses/course-5.avif" width="520" height="370" class="img-cover">
                     </div>
 
-                    <img src="/assets/banner/about-banner.png" 
+                    <img src="./assets/banner/about-banner.png" 
                     width="220" height="10" loading="lazy" class="shape about-shape_2">
                    
-                    <img src="/assets/courses/course-7.avif" 
+                    <img src="./assets/courses/course-7.avif" 
                     width="360" height="420" loading="lazy" class="shape about-shape_1">
 
-                    <img src="/assets/courses/course-4.avif" 
+                    <img src="./assets/courses/course-4.avif" 
                     width="36" height="40" loading="lazy" class="shape about-shape_4">
 
-                    <img src="/assets/courses/course-6.avif" 
+                    <img src="./assets/courses/course-6.avif" 
                     width="660" height="990" loading="lazy" class="shape about-shape_3">
                 </figure>
 
@@ -375,7 +375,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
                         <div class="course-card">
 
                             <figure class="card-banner img-holder"  style="--width:370 ; --height:220 ;">
-                            <img src="/assets/courses/course-0.avif" width="370" height="220" alt="image" class="img-cover">
+                            <img src="./assets/courses/course-0.avif" width="370" height="220" alt="image" class="img-cover">
 
                             </figure>
 
@@ -432,7 +432,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
                         <div class="course-card">
 
                             <figure class="card-banner img-holder"  style="--width: ; --height: ;">
-                            <img src="/assets/courses/course-1.jpg" alt="Build An Interactive-Real World Artificial Intelligence app with Python" class="img-cover">
+                            <img src="./assets/courses/course-1.jpg" alt="Build An Interactive-Real World Artificial Intelligence app with Python" class="img-cover">
 
                             </figure>
 
@@ -488,7 +488,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
                         <div class="course-card">
 
                             <figure class="card-banner img-holder"  style="--width: ; --height: ;">
-                            <img src="/assets/courses/course-2.avif" alt="Cybersecurity, security architecture, Ethical Hacking and Penetraion Testing" class="img-cover">
+                            <img src="./assets/courses/course-2.avif" alt="Cybersecurity, security architecture, Ethical Hacking and Penetraion Testing" class="img-cover">
 
                             </figure>
 
@@ -544,7 +544,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
                         <div class="course-card">
 
                             <figure class="card-banner img-holder"  style="--width: ; --height: ;">
-                            <img src="/assets/courses/course-3.jpg" alt="Cybersecurity, security architecture, Ethical Hacking and Penetraion Testing" class="img-cover">
+                            <img src="./assets/courses/course-3.jpg" alt="Cybersecurity, security architecture, Ethical Hacking and Penetraion Testing" class="img-cover">
 
                             </figure>
 
@@ -599,7 +599,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
                         <div class="course-card">
 
                             <figure class="card-banner img-holder"  style="--width: ; --height: ;">
-                                    <img src="/assets/courses/course-4.avif" alt="Backend Development with Java, C, C++, Ruby, Perl, Python and G" class="img-cover">
+                                    <img src="./assets/courses/course-4.avif" alt="Backend Development with Java, C, C++, Ruby, Perl, Python and G" class="img-cover">
 
                             </figure>
 
@@ -654,7 +654,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
                         <div class="course-card">
 
                             <figure class="card-banner img-holder"  style="--width: ; --height: ;">
-                                    <img src="/assets/courses/course-5.avif" alt="DevOps Engineering and Continuous Deployment: A Dynamic Duo for Modern Software Delivery" class="img-cover">
+                                    <img src="./assets/courses/course-5.avif" alt="DevOps Engineering and Continuous Deployment: A Dynamic Duo for Modern Software Delivery" class="img-cover">
 
                             </figure>
 
@@ -710,7 +710,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
                         <div class="course-card">
 
                             <figure class="card-banner img-holder"  style="--width: ; --height: ;">
-                                    <img src="/assets/courses/course-7.avif" alt="Data Science and Predictive Analytics: Unveiling Insights for Informed Decision-Making" class="img-cover">
+                                    <img src="./assets/courses/course-7.avif" alt="Data Science and Predictive Analytics: Unveiling Insights for Informed Decision-Making" class="img-cover">
 
                             </figure>
 
@@ -765,7 +765,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
                         <div class="course-card">
 
                             <figure class="card-banner img-holder"  style="--width:370 ; --height:220 ;">
-                            <img src="/assets/courses/course-6.avif" width="370" height="220" alt="image" class="img-cover">
+                            <img src="./assets/courses/course-6.avif" width="370" height="220" alt="image" class="img-cover">
 
                             </figure>
 
@@ -840,7 +840,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!---
     custom JS link
     -->
-    <script src="/index.js" defer ></script>
+    <script src="./index.js" defer ></script>
     <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 
