--- a/web-project/index.html
+++ b/web-project/index.html
@@ -826,6 +826,34 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
             </div>
          </section>
 
+        <!-----
+        VIDEO
+        ------>
+        <section class=" video has-bg-image" style="background-image: url('/assets/banner/body-0-bg.avif');"
+             aria-label="video">
+
+                <div class="container">
+
+                    <div class="video-card">
+
+                        <div class="video-banner has-after img-holder">
+                            <img src="./assets/banner/video-banner.png" alt="" class="img-cover">
+
+                            <button class="play-btn">
+                                <i class="fas fa-play"></i>
+                            </button>
+                            <!---icon-->
+                        </div>
+
+                        <img src="/assets/banner/video-banner.png" alt="" class="shape video-shape-1">
+
+                        <img src="" alt="" class="shape video-shape-2">
+
+                    </div>
+
+                </div>
+            </section>
+
 
 
     </article>
