--- a/web-project/index.html
+++ b/web-project/index.html
@@ -829,7 +829,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
         <!-----
         VIDEO
         ------>
-        <section class=" video has-bg-image" style="background-image: url('/assets/banner/body-0-bg.avif');"
+        <section class=" video has-bg-image" style="background-image: url('./assets/banner/body-0-bg.avif');"
              aria-label="video">
 
                 <div class="container">
@@ -845,7 +845,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
                             <!---icon-->
                         </div>
 
-                        <img src="/assets/banner/video-banner.png" alt="" class="shape video-shape-1">
+                        <img src="./assets/banner/video-banner.png" alt="" class="shape video-shape-1">
 
                         <img src="" alt="" class="shape video-shape-2">
 
